--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "html-to-image": "^1.9.0",
     "next": "12.1.5",
+    "next-sitemap": "^2.5.20",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
